--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -27,4 +27,7 @@
     .cajaHabilidades{
         grid-column: 1/5;
     }
+    .portafolio .contenedor .galeria-port .imagen-port{
+        width: 100%;
+    }
 }
