--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -269,5 +269,8 @@ footer span a:hover {
   .portafolio .contenedor .galeria-port .imagen-port {
     width: 100%;
   }
+  .ancho {
+    width: 100%;
+  }
 }
 /*# sourceMappingURL=estilos.css.map */
